<resources>

    <!--  FACEBOOK  -->
    <string name="facebook_app_id">481217056244918</string>
    <string name="fb_login_protocol_scheme">fb481217056244918</string>

    <!--  ADMOB  -->
    <string name="admob_id_app" translatable="false">ca-app-pub-2435307357987224~3218466148</string>
    <string name="admob_banner_geral" translatable="false">ca-app-pub-2435307357987224/7605423393</string>
    <string name="admob_intersticial_geral" translatable="false">ca-app-pub-2435307357987224/7343545427</string>
    <string name="admob_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>


    <string name="app_name">MY TASKS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Today</string>
    <string name="menu_next">This Week</string>
    <string name="menu_done">Done</string>


    <string name="hint_task">Task</string>
    <string name="hint_priority">Priority</string>
    <string name="complete">Complete</string>
    <string name="save">Save</string>
    <string name="hint_description">Description</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="not_have_an_account_yet">Not have an account yet?</string>
    <string name="register">Register</string>
    <string name="txt_err_connect_a_google">Error connecting to Google account</string>
    <string name="txt_err_create_account_google">Error creating account with Google</string>


    <!--  TASK FORM  -->
    <string name="task_successfully_created">Task successfully created</string>
    <string name="await_loading">Wait...</string>

    <!--  TASK FORM ERROR -->
    <string name="task_error">Enter the name of the task</string>

    <!--  DIALOG CUSTOM GALERY  -->
    <string name="txt_dialog_camera">Camera</string>
    <string name="txt_dialog_gallery">Gallery</string>
    <string name="btn_dialog_cancel">Cancel</string>
    <string name="txt_dialog_choose">Choose</string>
    <string name="task_today">Today</string>
    <string name="task_this_week">This Week</string>
    <string name="task_done">Done</string>
    <string name="remove_task">Remove This Task</string>
    <string name="confirme_remove_task">Do you want to remove this task?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="undo_task">Undo Task</string>
    <string name="confirme_undo_task">Do you want to undo this task?</string>
    <string name="done_task">Done Task</string>
    <string name="confirme_done_task">Did you complete this task?</string>
    <string name="task_removed_successfully">Task successfully removed</string>
    <string name="task_updated_successfully">Task successfully updated</string>
    <string name="next_week">Next Week</string>
    <string name="not_completed">Not Completed</string>
    <string name="message_notification">Your task starts in an hour</string>
    <string name="default_notification_channel_id" translatable="false">default_notification_channel_id</string>
    <string name="logout">Logout</string>
    <string name="title_logout">Exite</string>
    <string name="message_logout">Do you want to exit the app?</string>
    <string name="loading">Loading...</string>


    <!--  ITEMS PRIORITY  -->
    <string-array name="priorities_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>