<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mytasks.ui.today.TodayFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_today" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mytasks.ui.thisWeek.ThisWeekFragment"
        android:label="@string/menu_next"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_next_week"
        android:name="com.example.mytasks.ui.nextWeek.NextWeekFragment"
        android:label="@string/next_week"
        tools:layout="@layout/fragment_today" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mytasks.ui.done.DoneFragment"
        android:label="@string/menu_done"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_not_completed"
        android:name="com.example.mytasks.ui.notCompleted.NotCompletedFragment"
        android:label="@string/not_completed"
        tools:layout="@layout/fragment_today" />
</navigation>