<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_dialog_choose"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_dialog_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:layout_constraintEnd_toStartOf="@+id/constraint_layout_dialog_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread">

        <ImageView
            android:id="@+id/img_camera"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@android:drawable/ic_menu_camera"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_dialog_camera"
            android:textAlignment="center"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="@+id/img_camera"
            app:layout_constraintStart_toStartOf="@+id/img_camera"
            app:layout_constraintTop_toBottomOf="@+id/img_camera" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_dialog_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="32dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_gallery"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@android:drawable/ic_menu_gallery"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/txt_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_dialog_gallery"
            android:textAlignment="center"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="@+id/img_gallery"
            app:layout_constraintStart_toStartOf="@+id/img_gallery"
            app:layout_constraintTop_toBottomOf="@+id/img_gallery" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_dialog_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingBottom="0dp"
        android:text="@string/btn_dialog_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout_dialog_gallery"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>