<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticationActivity">


    <ImageView
        android:id="@+id/task_logo"
        android:layout_width="160dp"
        android:layout_height="140dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo_task"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_logo" />

    <!-- Google -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_google"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_app">

        <ImageView
            android:id="@+id/img_google"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/google" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="40dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/login_with_google"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_google" />
    </androidx.cardview.widget.CardView>

    <!-- Facebook -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_facebook"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview_google">

        <ImageView
            android:id="@+id/img_facebook"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/facebook" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="40dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/login_with_facebook"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/img_facebook" />
    </androidx.cardview.widget.CardView>

    <!--    <LinearLayout-->
    <!--        android:id="@+id/linearLayout_register"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="32dp"-->
    <!--        android:gravity="center"-->
    <!--        android:orientation="horizontal"-->
    <!--        android:padding="7dp"-->
    <!--        android:textAlignment="center"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent">-->

    <!--        <TextView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:text="@string/not_have_an_account_yet"-->
    <!--            android:textSize="14sp"-->
    <!--            tools:ignore="MissingConstraints" />-->

    <!--        <TextView-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:paddingStart="5dp"-->
    <!--            android:text="@string/register"-->
    <!--            android:textStyle="bold"-->
    <!--            tools:ignore="MissingConstraints" />-->

    <!--    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>